Typo in help text as well as in tex manual: neg_l_ects.

--- a/doc/manual/XCSoar-manual.tex
+++ b/doc/manual/XCSoar-manual.tex
@@ -3706,7 +3706,7 @@ Average dry thermal updraft strength near mid-BL height.  Subtract
 glider descent rate to get average vario reading for cloudless
 thermals.  Updraft strengths will be stronger than this forecast if
 convective clouds are present, since cloud condensation adds buoyancy
-aloft (i.e. this negects ``cloudsuck'').  This value depends upon both
+aloft (i.e. this neglects ``cloudsuck'').  This value depends upon both
 the surface heating and the BL depth.
 
 \begin{center}
